web/src/app/pages/contacts/contacts.component.css
.contacts {
    justify-content: space-around;
    display: flex;
    gap: 20px;
    max-width: 900px; /* Set a maximum width for the section */
    margin: 0 auto; /* Center the section */
    text-align: center; /* Center the text */
}

.column {
    display: flex-col;
    margin: 1em;
  }

  .column img {
    margin: auto;
    padding: 5px;
    width:  250px;
    height: 250px;
    object-fit: cover;
    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5); /* Add shadow effect */
}

.column h3 {
    margin: 10px;
    font-size: 1.6em;
    font-style: bold;
    text-transform: uppercase;
}
.column p {
    font-size: 1.4em;
    color: #7c7c7c;
}

